Toggle do sign up adicionado e css da home page aprimorada.

--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -71,10 +71,10 @@
                         FABRIC    
                     </button>
                     <ul id='fabric-picker' class="toggleable">
-                        <li class="selected">COTTOM</li>
-                        <li>POLYESTER</li>
-                        <li>ELASTANE</li>
-                        <li>LUREX</li>
+                        <li class="selected"><button>COTTOM</button></li>
+                        <li><button>POLYESTER</button></li>
+                        <li><button>ELASTANE</button></li>
+                        <li><button>LUREX</button></li>
                     </ul>       
                 </li>
             </ul>
@@ -90,19 +90,19 @@
         <section id='catalog'>
             <%- include('./components/catalogPage/catalog-item', {
                 image: 'https://previews.123rf.com/images/indiraswork/indiraswork1608/indiraswork160800016/60704203-hot-summer-girl-beauty-sexy-lady-wear-fashion-dress-casual-clothes-party-date-time-model-woman-luxur.jpg',
-                url: '',
+                url: '/product',
                 title: 'BLACK SPORT FOX BRALETTE adfasdfsadfa afsdfasdf',
                 price: '99.00'
             }) %> 
             <%- include('./components/catalogPage/catalog-item', {
                 image: 'https://previews.123rf.com/images/photosvit/photosvit1908/photosvit190801893/129245718-menswear-and-fashionable-clothing-daily-outfit-man-model-clothes-shop-man-looks-handsome-in-casual-s.jpg',
-                url: '',
+                url: '/product',
                 title: 'PARADISE UTILITY JUMPSUIT',
                 price: '179.00'
             }) %>
             <%- include('./components/catalogPage/catalog-item', {
                 image: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg',
-                url: '',
+                url: '/product',
                 title: 'KHAKI LEGEND HIGH WAIST MOM JEAN',
                 price: '150.00'
             }) %>
