--- a/views/components/htmlTop.ejs
+++ b/views/components/htmlTop.ejs
@@ -11,6 +11,7 @@
     <title><%= page %></title>
     <%- include('./style/style-preset') -%>
     <%- include('./style/style-header') -%>
+    <%- include('./style/style-sign-up') -%>
     <%- include('./style/style-footer') -%>
     <% switch(page) {
         case 'Home': %>
@@ -35,3 +36,4 @@
 </head>
 <body>
     <%- include('./header') -%>
+    <%- include('./sign-up') -%>
