--- a/views/components/productPage/style/style-product-page.ejs
+++ b/views/components/productPage/style/style-product-page.ejs
@@ -164,15 +164,19 @@
             width: 60%;
         }
 
-        section#product-buy aside {
-            width: 40%;
+        section#product-buy {
+            height: fit-content;
         }
+
+            section#product-buy aside {
+                width: 40%;
+            }
     }
 
     section#product-extra {
         width: 100%;
 
-        height: 100vh;
+        height: fit-content;
 
         display: flex;
 
