--- a/views/components/style/style-arrivals.ejs
+++ b/views/components/style/style-arrivals.ejs
@@ -1,8 +1,13 @@
 <style>
     section#section-arrivals {
-        padding: 8% 6% 5%;
+        display: flex;
 
-        height: 80vh;
+        justify-content: center;
+        align-items: center;
+
+        padding: 6% 6% 3%;
+
+        height: fit-content;
     }
 
         #arrivals {
@@ -11,9 +16,7 @@
             width: 100%;
             max-width: 1300px;
 
-            margin: 0 auto;
-
-            height: 100%;
+            height: fit-content;
 
             display: grid;
 
@@ -52,7 +55,7 @@
             }
 
             #arrivals h3 {
-                top: -4rem;
+                top: -3rem;
             }
 
             #arrivals > div {
