--- a/views/components/bagPage/bag-item.ejs
+++ b/views/components/bagPage/bag-item.ejs
@@ -2,7 +2,7 @@
     <div>
         <img class='bag-item-photo' src="<%= image %>" />
         <div class='bag-item-info'>
-            <h3><%= title %></h3>
+            <a href="/product"><h3><%= title %></h3></a>
             <h4>USD $<%= price %></h4>
 
             <div class='bag-item-attributes'>
