--- a/views/components/homePage/section.ejs
+++ b/views/components/homePage/section.ejs
@@ -1,5 +1,5 @@
 <section style="background-image: url('<%= background_image %>');"> 
-    <div id='' class="section-title <%= positions %>">
+    <div id='' class="section-title reveal <%= positions %>">
         <h1><%= title %></h1>
         <p>
             <% for(let el of text) {
