--- a/views/components/style/style-header.ejs
+++ b/views/components/style/style-header.ejs
@@ -176,6 +176,10 @@
         width: 100vw;
     }
 
+        .home-page-header-aside.desktop a:hover, .home-page-header-aside.desktop button:hover {
+            color: gray;
+        }
+
         .home-page-header-aside.desktop.left > * {
             margin-right: 2rem;
         }
