--- a/views/components/arrivals.ejs
+++ b/views/components/arrivals.ejs
@@ -2,7 +2,13 @@
     <div id='arrivals'>
         <h3><%= title %></h3>
         <% for(let item of arrivals) { %>
-            <img src="<%= item %>">
+            <div class="arrival-item">
+                <%- include('./hover-content', {
+                    title: 'Roupa nova muito braba',
+                    content: 'Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis error labore quae'
+                }) %> 
+                <img src="<%= item %>">
+            </div>
         <% } %>
     </div>
 </section>
