--- a/views/components/bagModalPage/style/style-bag-modal-page.ejs
+++ b/views/components/bagModalPage/style/style-bag-modal-page.ejs
@@ -7,15 +7,14 @@
     }
     
     section#bag-modal-preview {
-        width: 75%;
+        width: calc(100% - 300px);
         height: 100%;
 
         background: darkgrey;
     }
 
     section#bag-modal-aside {
-        min-width: 250px;
-        width: 25%;
+        width: 300px;
 
         height: 100%;
 
@@ -94,6 +93,13 @@
                     height: 10px;
                     width: 10px;
                 }
+
+            .bag-modal-item-remove:hover * {
+                color: red;
+                text-decoration: underline;
+
+                fill: red;
+            }
 
             .bag-modal-item-info {
                 position: absolute;
