--- a/views/components/bagPage/style/style-bag-page.ejs
+++ b/views/components/bagPage/style/style-bag-page.ejs
@@ -62,6 +62,10 @@
                     width: 100%;
                 }
 
+                    .bag-item-info a:hover {
+                        text-decoration: underline;
+                    }
+
                     .bag-item-info h4 {
                         margin-top: 10px;
                     }
@@ -84,6 +88,10 @@
                     justify-content: flex-end;
 
                     padding: 20px 0;
+
+                    width: fit-content;
+
+                    margin-left: auto;
                 }
 
                     .bag-item-remove button {
@@ -98,6 +106,13 @@
 
                         margin-right: 10px;
                     }
+
+                .bag-item-remove:hover * {
+                    color: red;
+                    text-decoration: underline;
+
+                    fill: red;
+                }
 
                 #bag-checkout {
                     display: flex;
