--- a/views/components/homePage/style/style-home-page.ejs
+++ b/views/components/homePage/style/style-home-page.ejs
@@ -1,10 +1,10 @@
 <style>
     .left {
-        left: 10%;
+        left: 0;
     }
 
     .right {
-        right: 10%
+        right: 0;
     }
 
     .top {
@@ -55,7 +55,37 @@
             width: 40%;
             min-width: 200px;
             max-width: 300px;
+
+            transition: all 0.3s ease-in-out;
         }
+
+            .section-title a:hover {
+                background-color: lightgray;
+
+                color: black;
+            }
+
+    /* EFEITO DE SLIDE NO DESKTOP */
+    @media screen and (min-width: 800px) {
+        .section-title {
+            opacity: 0;
+
+            transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+        }
+
+        .section-title.active {
+            opacity: 1;
+        }
+
+        .section-title.left.active {
+            transform: translateX(10%);
+        }
+
+        .section-title.right.active {
+            transform: translateX(-10%);
+        }
+    }
+
 
     @media screen and (max-width: 800px) {
         .left, .right, .top, .bottom {
@@ -107,10 +137,10 @@
                     display: none;
                 }
 
-            .section-title a {
+            /* .section-title a {
                 border-color: #000F08;
                 color: #000F08;
-            }
+            } */
     }
 
     section#section-photo-triple {
@@ -131,12 +161,16 @@
             grid-template-columns: 1fr 1fr 1fr;
         }
 
-            #photo-triple img {
-                width: 100%;
-                height: 100%;
-
-                object-fit: cover;
+            .photo-triple-item {
+                position: relative;
             }
+
+                #photo-triple img {
+                    width: 100%;
+                    height: 100%;
+
+                    object-fit: cover;
+                }
 
     @media screen and (max-width: 800px) {
         section#section-photo-triple {
@@ -169,8 +203,8 @@
             grid-template-rows: 35vh 35vh;
             grid-template-columns: 2fr 1fr 1fr;
             grid-template-areas: 
-                'A B C'
-                'A D E';
+                'A B B'
+                'A B B';
         }
 
             #shop-title-top, #shop-title-bottom {
@@ -189,9 +223,13 @@
                 bottom: -10%;
             }
 
-            #main-shop-photo {
-                grid-area: A;
+            .shop-item {
+                position: relative;
             }
+
+                .shop-item:first-of-type {
+                    grid-area: A;
+                }
 
             #main-shop-photo, .shop-photo {
                 height: 100%;
