--- a/views/components/htmlBottom.ejs
+++ b/views/components/htmlBottom.ejs
@@ -4,7 +4,7 @@
 
     <% switch(page) {
         case 'Product': %>
-            // SLICK CAROUSEL CDN
+            <!-- SLICK CAROUSEL CDN -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
             <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
             <script>
