--- a/views/components/style/style-arrivals.ejs
+++ b/views/components/style/style-arrivals.ejs
@@ -23,7 +23,7 @@
             grid-template-columns: 1fr 1fr 1fr 1fr;
             grid-template-rows: 1fr;
         }
-            #arrivals h3 {
+            #arrivals > h3 {
                 position: absolute;
 
                 top: -10%;
@@ -33,12 +33,16 @@
                 text-align: center;
             }
 
-            #arrivals > img {
-                width: 100%;
-                height: 100%;
-
-                object-fit: cover;
+            .arrival-item {
+                position: relative;
             }
+
+                .arrival-item img {
+                    width: 100%;
+                    height: 100%;
+
+                    object-fit: cover;
+                }
 
     @media screen and (max-width: 800px) {
         section#section-arrivals {
@@ -58,8 +62,8 @@
                 top: -3rem;
             }
 
-            #arrivals > div {
+            /* #arrivals > div {
                 height: 400px;
-            }
+            } */
     }
 </style>
