--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -12,11 +12,11 @@
         </div>
         <a href="/"><h1 class='home-page-header-logo mobile'>BACULEJO'S</h1></a>
         <div class="home-page-header-aside mobile right">
-            <a>
+            <button class="search-button">
                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M23.7061 22.5568L17.9363 16.7669C19.3665 15.0172 20.2286 12.776 20.2286 10.3333C20.2286 4.73023 15.698 0.183899 10.1143 0.183899C4.52571 0.183899 0 4.73023 0 10.3333C0 15.9363 4.52571 20.4827 10.1143 20.4827C12.5486 20.4827 14.7771 19.6225 16.5208 18.1874L22.2906 23.9723C22.6824 24.3655 23.3143 24.3655 23.7061 23.9723C24.098 23.584 24.098 22.945 23.7061 22.5568ZM10.1143 18.4626C5.64245 18.4626 2.00816 14.8157 2.00816 10.3333C2.00816 5.85084 5.64245 2.19903 10.1143 2.19903C14.5812 2.19903 18.2204 5.85084 18.2204 10.3333C18.2204 14.8157 14.5812 18.4626 10.1143 18.4626Z" fill="white"/>
                 </svg>                        
-            </a>
+            </button>
             <a href="/bag">
                 <svg width="28" height="32" viewBox="0 0 28 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M20.5714 6.85714L27.4286 6.85714V32H0V6.85714L6.85714 6.85714C6.85714 3.07005 9.92719 0 13.7143 0C17.5014 0 20.5714 3.07005 20.5714 6.85714ZM18.2857 9.14286H9.14286V10.2857H18.2857V9.14286ZM6.85714 9.14286V12.5714L9.14285 12.5714V10.2857H18.2857V12.5714L20.5714 12.5714V9.14286H25.1429V29.7143H2.28571V9.14286H6.85714ZM9.14286 6.85714C9.14286 4.33241 11.1896 2.28571 13.7143 2.28571C16.239 2.28571 18.2857 4.33241 18.2857 6.85714H9.14286Z" fill="#000F08"/>
@@ -30,6 +30,22 @@
         </div>
     </main>
 
+    <div class="header-search-container">
+        <input type="text" name="" id="" placeholder="SEARCH">
+        <div class="search-option-field">
+            <button class="search-cancel-button">
+                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.4697 16.0055L0.305137 30.2696C-0.0883785 30.6659 -0.0883785 31.3079 0.305137 31.7042C0.501645 31.9026 0.759655 32.0012 1.01716 32.0012C1.27517 32.0012 1.53268 31.9026 1.72919 31.7042L16.0002 17.3328L30.2713 31.7042C30.4683 31.9026 30.7258 32.0012 30.9833 32.0012C31.2408 32.0012 31.4989 31.9026 31.6954 31.7042C32.0889 31.3079 32.0889 30.6659 31.6954 30.2696L17.5313 16.0055L31.7049 1.7314C32.0984 1.33512 32.0984 0.693112 31.7049 0.296832C31.3113 -0.0989441 30.6738 -0.0989441 30.2808 0.296832L16.0007 14.6782L1.71919 0.297336C1.32568 -0.0984406 0.688652 -0.0984406 0.295137 0.297336C-0.0983788 0.693616 -0.0983788 1.33562 0.295137 1.7319L14.4697 16.0055Z" fill="#1D1D1B"/>
+                </svg>
+            </button>
+            <button class="search-submit-button">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <path d="M508.875,248.458l-160-160c-4.167-4.167-10.917-4.167-15.083,0c-4.167,4.167-4.167,10.917,0,15.083l141.792,141.792    H10.667C4.771,245.333,0,250.104,0,256s4.771,10.667,10.667,10.667h464.917L333.792,408.458c-4.167,4.167-4.167,10.917,0,15.083    c2.083,2.083,4.813,3.125,7.542,3.125c2.729,0,5.458-1.042,7.542-3.125l160-160C513.042,259.375,513.042,252.625,508.875,248.458z    "/>
+                </svg>
+            </button>
+        </div>  
+    </div>
+
     <nav id="header-burguer-field">
         <ul id="header-burguer-menu">
             <li><a href="#arrivals">NEW ARRIVALS</a></li>
@@ -42,8 +58,8 @@
 
 
 <header class='home-page-header desktop'>
-    <span class="slideTab"></span>
     <main>
+        <span class="slideTab"></span>
         <div class="home-page-header-aside desktop left">
             <a href="#arrivals">NEW ARRIVALS</a>
             <a href="/catalog">SHOP</a>
@@ -51,12 +67,12 @@
         </div>
         <a href="/"><h1 class='home-page-header-logo desktop'>BACULEJO'S</h1></a>
         <div class="home-page-header-aside desktop right">
-            <a>
+            <button class="search-button">
                 <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M23.7061 22.5568L17.9363 16.7669C19.3665 15.0172 20.2286 12.776 20.2286 10.3333C20.2286 4.73023 15.698 0.183899 10.1143 0.183899C4.52571 0.183899 0 4.73023 0 10.3333C0 15.9363 4.52571 20.4827 10.1143 20.4827C12.5486 20.4827 14.7771 19.6225 16.5208 18.1874L22.2906 23.9723C22.6824 24.3655 23.3143 24.3655 23.7061 23.9723C24.098 23.584 24.098 22.945 23.7061 22.5568ZM10.1143 18.4626C5.64245 18.4626 2.00816 14.8157 2.00816 10.3333C2.00816 5.85084 5.64245 2.19903 10.1143 2.19903C14.5812 2.19903 18.2204 5.85084 18.2204 10.3333C18.2204 14.8157 14.5812 18.4626 10.1143 18.4626Z" fill="white"/>
                 </svg>                        
                 SEARCH
-            </a>
+            </button>
             <button id='sign-up-open-button'>SIGN IN</button>
             <a href="/bag">BAG (2)</a>
             <a href="/bag-modal">
@@ -66,4 +82,20 @@
             </a>
         </div>
     </main>
+    
+    <div class="header-search-container">
+        <input type="text" name="" id="" placeholder="SEARCH">
+        <div class="search-option-field">
+            <button class="search-cancel-button">
+                <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M14.4697 16.0055L0.305137 30.2696C-0.0883785 30.6659 -0.0883785 31.3079 0.305137 31.7042C0.501645 31.9026 0.759655 32.0012 1.01716 32.0012C1.27517 32.0012 1.53268 31.9026 1.72919 31.7042L16.0002 17.3328L30.2713 31.7042C30.4683 31.9026 30.7258 32.0012 30.9833 32.0012C31.2408 32.0012 31.4989 31.9026 31.6954 31.7042C32.0889 31.3079 32.0889 30.6659 31.6954 30.2696L17.5313 16.0055L31.7049 1.7314C32.0984 1.33512 32.0984 0.693112 31.7049 0.296832C31.3113 -0.0989441 30.6738 -0.0989441 30.2808 0.296832L16.0007 14.6782L1.71919 0.297336C1.32568 -0.0984406 0.688652 -0.0984406 0.295137 0.297336C-0.0983788 0.693616 -0.0983788 1.33562 0.295137 1.7319L14.4697 16.0055Z" fill="#1D1D1B"/>
+                </svg>
+            </button>
+            <button class="search-submit-button">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <path d="M508.875,248.458l-160-160c-4.167-4.167-10.917-4.167-15.083,0c-4.167,4.167-4.167,10.917,0,15.083l141.792,141.792    H10.667C4.771,245.333,0,250.104,0,256s4.771,10.667,10.667,10.667h464.917L333.792,408.458c-4.167,4.167-4.167,10.917,0,15.083    c2.083,2.083,4.813,3.125,7.542,3.125c2.729,0,5.458-1.042,7.542-3.125l160-160C513.042,259.375,513.042,252.625,508.875,248.458z    "/>
+                </svg>
+            </button>
+        </div>
+    </div>
 </header>
