--- a/views/components/style/style-footer.ejs
+++ b/views/components/style/style-footer.ejs
@@ -93,6 +93,9 @@
 
                     #footer-info svg {
                         margin-right: 10px;
+
+                        height: 25px;
+                        width: 25px;
                     }
 
                     .footer-list-title svg {
@@ -112,6 +115,11 @@
             #footer-info {
                 flex-direction: column;
             }
+
+                #footer-info svg {
+                    height: 20px;
+                    width: 20px;
+                }
 
                 .footer-list-title {
                     padding: 15px;
