--- a/views/bag-modal.ejs
+++ b/views/bag-modal.ejs
@@ -20,27 +20,29 @@
         </section>
         <section id='bag-modal-aside'>
             <header>
-                <span id="bag-quantity">BAG (2)</span>
+                <span id="bag-quantity">LOVED ITEMS (2)</span>
                 <a href="/">
                     <svg width="32" height="33" viewBox="0 0 32 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.4697 16.0055L0.305137 30.2696C-0.0883785 30.6659 -0.0883785 31.3079 0.305137 31.7042C0.501645 31.9026 0.759655 32.0012 1.01716 32.0012C1.27517 32.0012 1.53268 31.9026 1.72919 31.7042L16.0002 17.3328L30.2713 31.7042C30.4683 31.9026 30.7258 32.0012 30.9833 32.0012C31.2408 32.0012 31.4989 31.9026 31.6954 31.7042C32.0889 31.3079 32.0889 30.6659 31.6954 30.2696L17.5313 16.0055L31.7049 1.7314C32.0984 1.33512 32.0984 0.693112 31.7049 0.296832C31.3113 -0.0989441 30.6738 -0.0989441 30.2808 0.296832L16.0007 14.6782L1.71919 0.297336C1.32568 -0.0984406 0.688652 -0.0984406 0.295137 0.297336C-0.0983788 0.693616 -0.0983788 1.33562 0.295137 1.7319L14.4697 16.0055Z" fill="#1D1D1B"/>
-                    </svg>                        
+                    </svg>
                 </a>
             </header>
             <h3>TOTAL: USD $590.00</h3>
             <div id='button-field'>
-                <button id='view-bag-button'>VIEW BAG</button>
-                <button id='checkout-button'>CHECKOUT</button>
+                <a href="/bag" id='view-bag-button'>VIEW BAG</a>
+                <a href="/checkout" id='checkout-button'>CHECKOUT</a>
             </div>
 
             <%- include('./components/bagModalPage/bag-modal-item', {
                 title: 'VICTORIOUS SPILT BACK TOP',
+                image: 'https://media.istockphoto.com/photos/fashion-pretty-woman-model-in-colorful-clothes-over-white-background-picture-id603862106',
                 quantity: '1',
                 size: 'S',
                 price: '250.00'
             }) %>
             <%- include('./components/bagModalPage/bag-modal-item', {
                 title: 'VICTORIOUS SPILT BACK TOP',
+                image: 'https://previews.123rf.com/images/panicattack/panicattack1702/panicattack170200014/71400768-young-male-fashion-model-in-casual-clothes-carrying-leather-jacket-over-shoulder-full-body-length-po.jpg',
                 quantity: '1',
                 size: 'S',
                 price: '250.00'
