--- a/views/components/bagModalPage/bag-modal-item.ejs
+++ b/views/components/bagModalPage/bag-modal-item.ejs
@@ -1,4 +1,4 @@
-<div class="bag-modal-item">
+<div class="bag-modal-item" style="background-image: url('<%= image %>');">
     <span class='bag-modal-item-remove'>
         <button>
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
